fix: loggin handlebars

--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
             </form>
         </article>
     </main>
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
 </body>
 
 </html>
