feat: eliminar productos del carrito

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <main class="container">
-    Te damos la bienvenida a nuestro ecommerce
-    <a href="login">Portal Cliente</a>
+    <h1>Te damos la bienvenida a nuestro ecommerce</h1>
+    <h2><a href="login">Portal Cliente</a></h2>
   </main>
 </body>
 
